syntax = "proto3";

package l8poll;

option java_multiple_files = true;
option java_outer_classname = "L8Types";
option java_package = "com.jobs.types";
option go_package = "./types/l8poll";

import "targets.proto";
import "pollaris.proto";
import "services.proto";

message CJob {
  string error = 1;
  bytes result = 2;
  int64 started = 3;
  int64 ended = 4;
  L8C_CadencePlan cadence = 5;
  int64 timeout = 6;
  string target_id = 7;
  string host_id = 8;
  string pollaris_name = 9;
  string job_name = 10;
  l8services.L8ServiceLink link_p = 11;
  l8services.L8ServiceLink link_d = 12;
  map<string, string> arguments = 13;
  bytes lastResult = 14;
  int32 error_count = 15;
}