syntax = "proto3";

package l8tpollaris;

option java_multiple_files = true;
option java_outer_classname = "L8TPollaris";
option java_package = "com.l8tpollaris.types";
option go_package = "./types/l8tpollaris";

import "pollaris.proto";
import "services.proto";

message L8PTargetList {
  repeated L8PTarget list = 1;
}

message L8PTarget {
  string target_id = 1;
  l8services.L8ServiceLink link_collector = 2;
  l8services.L8ServiceLink link_parser = 3;
  l8services.L8ServiceLink link_data = 4;
  map<string, L8PHost> hosts = 5;
}

message L8PHost {
  string target_id = 1;
  map<int32, L8PHostProtocol> configs = 3;
  map<string, string> polls = 4;
  map<string, string> groups = 5;
}

message L8PHostProtocol {
  L8PProtocol protocol = 1;
  string addr = 2;
  int32 port = 3;
  string read_community = 4;
  string write_community = 5;
  string username = 6;
  string password = 7;
  repeated string prompt = 8;
  string terminal = 9;
  repeated string terminal_commands = 10;
  int64 timeout = 11;
  string KubeConfig = 12;
  string KukeContext = 13;
  string cert = 14;
  string http_prefix = 15;
  AuthInfo ainfo = 16;
}

message AuthInfo {
  bool need_auth = 1;
  string authBody = 2;
  string authUserField = 3;
  string authPassField = 4;
  string authResp = 5;
  string authToken = 6;
  string auth_path = 7;
}

message CMap {
  map<string, bytes> data = 1;
}

message CTable {
  map<int32, string> columns = 1;
  map<int32, CRow> rows = 2;
}

message CRow {
  map<int32, bytes> data = 1;
}